Beschreibe die Änderungen

--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
         <h2>Globale Aktivität — Demo</h2>
         <p>Interaktive Map-Optik mit pulsierenden Punkten. Ideal für FTP-Deploy auf einfache Webspaces.</p>
       </section>
+
+      <section id="fortnite" class="status-panel">
+        <h3>Fortnite Server Status</h3>
+        <div id="fortnite-status" class="status-list">
+          <p class="muted">Lade Status…</p>
+        </div>
+      </section>
     </main>
 
     <footer>
@@ -34,5 +41,6 @@
   </div>
 
   <script src="js/main.js"></script>
+  <script src="js/fortnite.js"></script>
 </body>
 </html>
