Beschreibe die Änderungen

--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
           <p class="muted">Lade Status…</p>
         </div>
       </section>
+
+      <section id="netflix" class="status-panel">
+        <h3>Netflix Server Status</h3>
+        <div id="netflix-status" class="status-list">
+          <p class="muted">Lade Status…</p>
+        </div>
+      </section>
     </main>
 
     <footer>
@@ -42,5 +49,6 @@
 
   <script src="js/main.js"></script>
   <script src="js/fortnite.js"></script>
+  <script src="js/netflix.js"></script>
 </body>
 </html>
