Add CI workflow for fetching status + client updates

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <div id="netflix-status" class="status-list">
           <p class="muted">Lade Status…</p>
         </div>
+        <div id="netflix-help" style="margin-top:10px;color:#cfeffb"></div>
       </section>
     </main>
 
