Remove legacy PHP admin and proxy; use serverless functions

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
     <main class="panel">
       <section class="hero">
-        <h2>Globale Aktivität — Demo</h2>
-        <p>Interaktive Map-Optik mit pulsierenden Punkten. Ideal für FTP-Deploy auf einfache Webspaces.</p>
+        <h2>Globale Aktivität</h2>
+        <p></p>
       </section>
 
       <section id="fortnite" class="status-panel">
