--- a/index.html
+++ b/index.html
@@ -34,13 +34,7 @@
         </div>
       </section>
 
-      <section id="netflix" class="status-panel">
-        <h3>Netflix Server Status</h3>
-        <div id="netflix-status" class="status-list">
-          <p class="muted">Lade Status…</p>
-        </div>
-        <div id="netflix-help" style="margin-top:10px;color:#cfeffb"></div>
-      </section>
+      <!-- Netflix section removed per user request -->
     </main>
 
     <footer>
@@ -50,6 +44,5 @@
 
   <script src="js/main.js"></script>
   <script src="js/fortnite.js"></script>
-  <script src="js/netflix.js"></script>
 </body>
 </html>
