--- a/index.html
+++ b/index.html
@@ -33,8 +33,12 @@
           <p class="muted">Lade Status…</p>
         </div>
       </section>
-
-      <!-- Netflix section removed per user request -->
+      <section id="netflix" class="status-panel">
+        <h3>Netflix Server Status</h3>
+        <div id="netflix-status" class="status-list">
+          <p class="muted">Lade Status…</p>
+        </div>
+      </section>
     </main>
 
     <footer>
@@ -44,5 +48,6 @@
 
   <script src="js/main.js"></script>
   <script src="js/fortnite.js"></script>
+  <script src="js/netflix.js"></script>
 </body>
 </html>
