Add Impressum page and footer link

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </main>
 
     <footer>
-      <small>© Serverwatch — Visuell inspiriert</small>
+      <small>© Serverwatch — Visuell inspiriert</small> — <a href="impressum.html">Impressum</a>
     </footer>
   </div>
 
