Add sections for WoW, Prime Video, Spotify; show links and simple clients

--- a/index.html
+++ b/index.html
@@ -35,7 +35,28 @@
       </section>
       <section id="netflix" class="status-panel">
         <h3>Netflix Server Status</h3>
-        <div id="netflix-status" class="status-list">
+        <div class="status-list">
+          <p>Siehe Netflix-Statusseite: <a href="https://help.netflix.com/de/is-netflix-down" target="_blank" rel="noopener">help.netflix.com/de/is-netflix-down</a></p>
+        </div>
+      </section>
+
+      <section id="wow" class="status-panel">
+        <h3>World of Warcraft Server Status</h3>
+        <div id="wow-status" class="status-list">
+          <p class="muted">Lade Status…</p>
+        </div>
+      </section>
+
+      <section id="prime" class="status-panel">
+        <h3>Amazon Prime Video Status</h3>
+        <div id="prime-status" class="status-list">
+          <p class="muted">Lade Status…</p>
+        </div>
+      </section>
+
+      <section id="spotify" class="status-panel">
+        <h3>Spotify Status</h3>
+        <div id="spotify-status" class="status-list">
           <p class="muted">Lade Status…</p>
         </div>
       </section>
@@ -49,5 +70,8 @@
   <script src="js/main.js"></script>
   <script src="js/fortnite.js"></script>
   <script src="js/netflix.js"></script>
+  <script src="js/wow.js"></script>
+  <script src="js/prime.js"></script>
+  <script src="js/spotify.js"></script>
 </body>
 </html>
