Include faux scrollbar script in index.html

--- a/index.html
+++ b/index.html
@@ -73,5 +73,6 @@
   <script src="js/wow.js"></script>
   <script src="js/prime.js"></script>
   <script src="js/spotify.js"></script>
+  <script src="js/scrollbar.js"></script>
 </body>
 </html>
