UI: render service links as buttons (.btn) and fix netflix.js

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <section id="netflix" class="status-panel">
         <h3>Netflix Server Status</h3>
         <div class="status-list">
-          <p>Siehe Netflix-Statusseite: <a href="https://help.netflix.com/de/is-netflix-down" target="_blank" rel="noopener">help.netflix.com/de/is-netflix-down</a></p>
+          <p>Siehe Netflix-Statusseite: <a class="btn" href="https://help.netflix.com/de/is-netflix-down" target="_blank" rel="noopener">Netflix-Status</a></p>
         </div>
       </section>
 
