UI: add WoW + Spotify sections and badge-style buttons; implement simple clients

--- a/index.html
+++ b/index.html
@@ -39,6 +39,20 @@
           <p class="muted">Lade Status…</p>
         </div>
       </section>
+      
+      <section id="wow" class="status-panel">
+        <h3>World of Warcraft Server Status</h3>
+        <div id="wow-status" class="status-list">
+          <p class="muted">Lade Status…</p>
+        </div>
+      </section>
+
+      <section id="spotify" class="status-panel">
+        <h3>Spotify Status</h3>
+        <div id="spotify-status" class="status-list">
+          <p class="muted">Lade Status…</p>
+        </div>
+      </section>
     </main>
 
     <footer>
@@ -49,5 +63,7 @@
   <script src="js/main.js"></script>
   <script src="js/fortnite.js"></script>
   <script src="js/netflix.js"></script>
+  <script src="js/wow.js"></script>
+  <script src="js/spotify.js"></script>
 </body>
 </html>
