Reorder services: wow, fortnite, starcitizen, spotify, netflix; add Star Citizen section and simple client; Netflix renders as link button

--- a/index.html
+++ b/index.html
@@ -27,19 +27,6 @@
         <p></p>
       </section>
 
-      <section id="fortnite" class="status-panel">
-        <h3>Fortnite Server Status</h3>
-        <div id="fortnite-status" class="status-list">
-          <p class="muted">Lade Status…</p>
-        </div>
-      </section>
-      <section id="netflix" class="status-panel">
-        <h3>Netflix Server Status</h3>
-        <div id="netflix-status" class="status-list">
-          <p class="muted">Lade Status…</p>
-        </div>
-      </section>
-      
       <section id="wow" class="status-panel">
         <h3>World of Warcraft Server Status</h3>
         <div id="wow-status" class="status-list">
@@ -47,9 +34,30 @@
         </div>
       </section>
 
+      <section id="fortnite" class="status-panel">
+        <h3>Fortnite Server Status</h3>
+        <div id="fortnite-status" class="status-list">
+          <p class="muted">Lade Status…</p>
+        </div>
+      </section>
+
+      <section id="starcitizen" class="status-panel">
+        <h3>Star Citizen</h3>
+        <div id="starcitizen-status" class="status-list">
+          <p class="muted">Lade…</p>
+        </div>
+      </section>
+
       <section id="spotify" class="status-panel">
         <h3>Spotify Status</h3>
         <div id="spotify-status" class="status-list">
+          <p class="muted">Lade Status…</p>
+        </div>
+      </section>
+
+      <section id="netflix" class="status-panel">
+        <h3>Netflix Server Status</h3>
+        <div id="netflix-status" class="status-list">
           <p class="muted">Lade Status…</p>
         </div>
       </section>
@@ -62,6 +70,7 @@
 
   <script src="js/main.js"></script>
   <script src="js/fortnite.js"></script>
+  <script src="js/starcitizen.js"></script>
   <script src="js/netflix.js"></script>
   <script src="js/wow.js"></script>
   <script src="js/spotify.js"></script>
