Add IP Status panel and client-side best-effort checks for root/TLD/public DNS IPs

--- a/index.html
+++ b/index.html
@@ -54,6 +54,16 @@
           <p class="muted">Lade Status…</p>
         </div>
       </section>
+
+      <section id="ipstatus" class="status-panel">
+        <h3>IP / DNS Nodes Status</h3>
+        <div class="controls">
+          <button id="ip-refresh" class="chip">Refresh All</button>
+        </div>
+        <div id="ip-status-list" class="status-list">
+          <p class="muted">Lade Status der angegebenen IPs…</p>
+        </div>
+      </section>
     </main>
 
     <footer>
@@ -66,6 +76,7 @@
   <script src="js/starcitizen.js"></script>
   <script src="js/netflix.js"></script>
   <script src="js/wow.js"></script>
+   <script src="js/ipstatus.js"></script>
   <script src="js/spotify.js"></script>
 </body>
 </html>
