Restore Spotify; trim IP entries to last three

--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
         </div>
       </section>
 
+      <section id="spotify" class="status-panel">
+        <h3>Spotify Status</h3>
+        <div id="spotify-status" class="status-list">
+          <p class="muted">Lade Status…</p>
+        </div>
+      </section>
+
       <section id="netflix" class="status-panel">
         <h3>Netflix Server Status</h3>
         <div id="netflix-status" class="status-list">
