Add Brawl Stars and Clash Royale panels + client checks

--- a/index.html
+++ b/index.html
@@ -62,6 +62,20 @@
         </div>
       </section>
 
+      <section id="brawlstars" class="status-panel">
+        <h3>Brawl Stars Server Status</h3>
+        <div id="brawlstars-status" class="status-list">
+          <p class="muted">Lade Status…</p>
+        </div>
+      </section>
+
+      <section id="clashroyale" class="status-panel">
+        <h3>Clash Royale Server Status</h3>
+        <div id="clashroyale-status" class="status-list">
+          <p class="muted">Lade Status…</p>
+        </div>
+      </section>
+
       <section id="ipstatus" class="status-panel">
         <h3>IP / DNS Nodes Status</h3>
         <div class="controls">
@@ -83,6 +97,8 @@
   <script src="js/starcitizen.js"></script>
   <script src="js/netflix.js"></script>
   <script src="js/wow.js"></script>
+  <script src="js/brawlstars.js"></script>
+  <script src="js/clashroyale.js"></script>
    <script src="js/ipstatus.js"></script>
   <script src="js/spotify.js"></script>
 </body>
