Remove Brawl Stars, Clash Royale and Spotify panels/scripts

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="ui">
     <header class="site-header">
       <h1>Serverwatch</h1>
-      <p class="tagline">Realtime-style map — statische Demo</p>
+      <p class="tagline">Realtime-style map</p>
     </header>
 
     <div class="controls">
@@ -48,30 +48,9 @@
         </div>
       </section>
 
-      <section id="spotify" class="status-panel">
-        <h3>Spotify Status</h3>
-        <div id="spotify-status" class="status-list">
-          <p class="muted">Lade Status…</p>
-        </div>
-      </section>
-
       <section id="netflix" class="status-panel">
         <h3>Netflix Server Status</h3>
         <div id="netflix-status" class="status-list">
-          <p class="muted">Lade Status…</p>
-        </div>
-      </section>
-
-      <section id="brawlstars" class="status-panel">
-        <h3>Brawl Stars Server Status</h3>
-        <div id="brawlstars-status" class="status-list">
-          <p class="muted">Lade Status…</p>
-        </div>
-      </section>
-
-      <section id="clashroyale" class="status-panel">
-        <h3>Clash Royale Server Status</h3>
-        <div id="clashroyale-status" class="status-list">
           <p class="muted">Lade Status…</p>
         </div>
       </section>
@@ -97,9 +76,6 @@
   <script src="js/starcitizen.js"></script>
   <script src="js/netflix.js"></script>
   <script src="js/wow.js"></script>
-  <script src="js/brawlstars.js"></script>
-  <script src="js/clashroyale.js"></script>
-   <script src="js/ipstatus.js"></script>
-  <script src="js/spotify.js"></script>
+  <script src="js/ipstatus.js"></script>
 </body>
 </html>
