Add Cloudflare panel + fetch from cloudflarestatus API

--- a/index.html
+++ b/index.html
@@ -55,6 +55,13 @@
         </div>
       </section>
 
+      <section id="cloudflare" class="status-panel">
+        <h3>Cloudflare Status</h3>
+        <div id="cloudflare-status" class="status-list">
+          <p class="muted">Lade Status…</p>
+        </div>
+      </section>
+
       <section id="ipstatus" class="status-panel">
         <h3>IP / DNS Nodes Status</h3>
         <div class="controls">
@@ -75,6 +82,7 @@
   <script src="js/fortnite.js"></script>
   <script src="js/starcitizen.js"></script>
   <script src="js/netflix.js"></script>
+  <script src="js/cloudflare.js"></script>
   <script src="js/wow.js"></script>
   <script src="js/ipstatus.js"></script>
 </body>
