Cloudflare: collapsible panel (default collapsed) and 5min polling when expanded

--- a/index.html
+++ b/index.html
@@ -55,9 +55,12 @@
         </div>
       </section>
 
-      <section id="cloudflare" class="status-panel">
-        <h3>Cloudflare Status</h3>
-        <div id="cloudflare-status" class="status-list">
+      <section id="cloudflare" class="status-panel collapsed">
+        <h3>
+          <span>Cloudflare Status</span>
+          <button id="cloudflare-toggle" class="chip" aria-expanded="false">+</button>
+        </h3>
+        <div id="cloudflare-status" class="status-list" style="display:none">
           <p class="muted">Lade Status…</p>
         </div>
       </section>
